--- a/P009385.opf/meta.yml
+++ b/P009385.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009385
+id: P009385
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG14674
   title: འབྲི་གུང་གསོ་རིག་གཅེས་བསྡུས།
-  volume: ''
   author: ''
+  volumes: {}
