--- a/P009385.opf/meta.yml
+++ b/P009385.opf/meta.yml
@@ -10,8 +10,10 @@ source_metadata:
       title: ''
       volume_number: 1
       total_pages: 334
+      base_file: v001.txt
     2bf13ae6544747579180700acef2191f:
       image_group_id: I1KG15759
       title: ''
       volume_number: 2
       total_pages: 382
+      base_file: v002.txt
