--- a/P009385.opf/layers/v001/Pagination.yml
+++ b/P009385.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 12a0a60c62a14a55800ec9a33c5e21f1
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   655d7fc5cb8d4275a39c128a845d654e:
