--- a/P009385.opf/layers/v002/Pagination.yml
+++ b/P009385.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: bf7e0f20f005410a8d9ea09dc2c6acea
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   43f398c84d394cfa8deca41fb6863e3d:
