--- a/P009385.opf/meta.yml
+++ b/P009385.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009385
 initial_creation_type: ocr
 created_at: 26/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 19:36:18.064730
 source_metadata:
   id: bdr:W1KG14674
   title: འབྲི་གུང་གསོ་རིག་གཅེས་བསྡུས།
@@ -19,3 +19,5 @@ source_metadata:
       volume_number: 2
       total_pages: 382
       base_file: v002.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
